--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,10 @@ body {
 
 /* General style */
 
+.section{
+
+}
+
 .link{
   text-decoration: none;
   font-family: inherit;
@@ -51,7 +55,6 @@ body {
   font-family: inherit;
   border-radius: 4px;
   border: none;
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
   font-size: 16px;
   font-style: normal;
   font-weight: 500;
@@ -298,7 +301,12 @@ color: var(--secondary-text)
   border: 1px solid var(--filter-button-border);
 }
 
-.filter-button-all, 
+.filter-button-all {
+  color: var(--hero-title);
+  background: var(--primary-brand);
+  border: 1px solid var(--primary-brand);
+}
+
 .filter-button:hover,
 .filter-button:focus {
   color: var(--hero-title);
